# Qt3DCube

./: CMakeLists.txt  Qt3DCube.pro  README.md  qml.qrc
qml/: Shortcuts.qml  main.qml
qml/Components/: CubeCell.qml  CubeFace.qml  CustomOrbitCameraController.qml  HelperOverlay.qml  RubiksCube.qml
src/: CubeController.cpp  CubeController.h  CubeEnums.h  CubeModel.cpp  CubeModel.h  CubeObject.cpp  CubeObject.h  main.cpp
